src/objects/revenueProperty__c.object
<CustomObject>
    <fields>
        <fullName>api10__c</fullName>
        <description>This field stores a set of API10 values which are associated to the property name.</description>
        <label>API10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNonWellRevenueProperty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non Well Revenue Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>numberOfAllocations__c</fullName>
        <label>Number of Allocations</label>
        <summaryForeignKey>RevenuePropertyWellAllocation__c.revenueProperty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>operatorName__c</fullName>
        <label>Operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payorFromSourceFile__c</fullName>
        <label>Payor from Source File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propertyId__c</fullName>
        <label>Property ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propertyName__c</fullName>
        <label>Property Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>royaltyChecks__c</fullName>
        <description>This field stores a set of royalty check Ids which are associated to the property name.</description>
        <label>Royalty Checks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>uniqueKey__c</fullName>
        <description>This field stores the concatenation of Property Name + Operator Name</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wells__c</fullName>
        <label>Wells</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Revenue Property</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Revenue Property-{00000}</displayFormat>
        <label>Revenue Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>